--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,28 @@
   margin: 0;
   padding: 0;
   background-color: rgb(255, 246, 232);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  border-bottom: 1px solid lightgrey;
+}
+
+.content {
+  margin: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 50px;
 }
 
 .container {
   display: flex;
-  width: 500px;
-  height: 500px;
+  width: 80vh;
+  height: 80vh;
   border: 2px solid #a1a1a1;
   box-sizing: content-box;
 }
@@ -42,5 +58,6 @@
 .pen-type,
 .pen-color,
 .technicolor {
+  margin: 7px;
   border: 1px solid gray;
 }
